Added differences between production and vagrant env

--- a/provision/roles/project/templates/000-default.conf.j2
+++ b/provision/roles/project/templates/000-default.conf.j2
@@ -7,6 +7,9 @@
     <Directory "{{ project_folder }}">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
+        {% if not production %}
+        Require all granted
+        {% endif %}
     </Directory>
 
     {% if not production %}
