--- a/provision/roles/project/templates/.htaccess.j2
+++ b/provision/roles/project/templates/.htaccess.j2
@@ -1,1 +1,17 @@
+DirectoryIndex index.php
 SetEnv ENVIRONMENT {{ project_environment }}
+php_flag log_errors on
+{% if not production %}
+php_flag display_startup_errors on
+php_flag display_errors on
+php_flag html_errors on
+{% else %}
+php_flag error_reporting E_ALL
+php_flag display_errors off
+
+ErrorDocument 404 {{ php_error_script }}
+ErrorDocument 500 {{ php_error_script }}
+ErrorDocument 502 {{ php_error_script }}
+ErrorDocument 503 {{ php_error_script }}
+ErrorDocument 504 {{ php_error_script }}
+{% endif %}
